--- a/compose.enhanced.yaml
+++ b/compose.enhanced.yaml
@@ -6,7 +6,7 @@ services:
       - "8001:8001"
     volumes:
       - redis_data:/data
-    command: redis-server --loadmodule /opt/redis-stack/lib/redistimeseries.so
+    command: redis-server --protected-mode no --loadmodule /opt/redis-stack/lib/redistimeseries.so
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
