--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -9,6 +9,8 @@ save 300 10     # Save snapshot if at least 10 keys changed in 300 seconds
 save 60 10000   # Save snapshot if at least 10000 keys changed in 60 seconds
 
 # Append only file for durability
+protected-mode noonly yes
+bind 0.0.0.0
 appendonly yes
 appendfsync everysec
 auto-aof-rewrite-percentage 100
