--- a/compose.yaml
+++ b/compose.yaml
@@ -1,168 +1,172 @@
 services:
-  backend:
-    env_file: 'backend.env'
-    build:
-      context: .
-      target: backend
+  # Redis Database with Authentication
+  redis:
+    image: redis/redis-stack:latest
+    container_name: aiwatch-redis
     ports:
-      - '8080:8080'
-      - '9090:9090'  # Metrics port
+      - "6379:6379"
+      - "8001:8001"
+    volumes:
+      - redis_data:/data
+      - ./redis.conf:/etc/redis/redis.conf
+    command: ["redis-server", "/etc/redis/redis.conf", "--protected-mode", "no", "--loadmodule", "/opt/redis-stack/lib/redistimeseries.so"]
     healthcheck:
-      test: ['CMD', 'wget', '-qO-', 'http://localhost:8080/health']
-      interval: 3s
-      timeout: 3s
-      retries: 3
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - app-network
-    depends_on:
-      - llm
-      - redis
+    restart: unless-stopped
+
+  # Redis Exporter for Prometheus
+  redis-exporter:
+    image: oliver006/redis_exporter:latest
+    container_name: aiwatch-redis-exporter
+    ports:
+      - "9121:9121"
     environment:
       - REDIS_ADDR=redis:6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
-      - REDIS_DB=0
-
-  frontend:
-    build:
-      context: ./frontend
-    ports:
-      - '3000:3000'
     depends_on:
-      backend:
+      redis:
         condition: service_healthy
     networks:
       - app-network
+    restart: unless-stopped
 
-  # Redis for token metrics storage
-  redis:
-    image: redis:7.2-alpine
-    command: redis-server --requirepass ${REDIS_PASSWORD:-} --appendonly yes
-    ports:
-      - '6379:6379'
-    volumes:
-      - redis-data:/data
-      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
-    networks:
-      - app-network
-    healthcheck:
-      test: ['CMD', 'redis-cli', '--raw', 'incr', 'ping']
-      interval: 3s
-      timeout: 3s
-      retries: 5
-
-  # Redis Exporter for Prometheus integration
-  redis-exporter:
-    image: oliver006/redis_exporter:v1.56.0
-    ports:
-      - '9121:9121'
-    environment:
-      - REDIS_ADDR=redis://redis:6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
-    networks:
-      - app-network
-    depends_on:
-      - redis
-
-  # Token Analytics Service - Real-time Redis data processor
-  token-analytics:
-    build:
-      context: .
-      target: token-analytics
-      dockerfile: Dockerfile.analytics
-    ports:
-      - '8081:8081'  # Analytics API port
-    environment:
-      - REDIS_ADDR=redis:6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
-      - REDIS_DB=0
-      - ANALYTICS_PORT=8081
-    networks:
-      - app-network
-    depends_on:
-      - redis
-    healthcheck:
-      test: ['CMD', 'wget', '-qO-', 'http://localhost:8081/health']
-      interval: 10s
-      timeout: 5s
-      retries: 3
-
+  # Prometheus
   prometheus:
-    image: prom/prometheus:v2.45.0
+    image: prom/prometheus:latest
+    container_name: aiwatch-prometheus
+    ports:
+      - "9091:9090"
     volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - ./prometheus/rules:/etc/prometheus/rules
+      # - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro  # Commented out to avoid mount error
+      - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
       - '--web.enable-lifecycle'
-      - '--storage.tsdb.retention.time=30d'
-    ports:
-      - '9091:9090'
     networks:
       - app-network
-    depends_on:
-      - redis-exporter
+    restart: unless-stopped
 
-  grafana:
-    image: grafana/grafana:10.1.0
-    volumes:
-      - ./grafana/provisioning:/etc/grafana/provisioning
-      - ./grafana/dashboards:/var/lib/grafana/dashboards
-      - grafana-data:/var/lib/grafana
+  # Token Analytics - FIXED REDIS CONNECTION
+  token-analytics:
+    build:
+      context: .
+      dockerfile: Dockerfile.analytics
+      target: token-analytics
+    container_name: aiwatch-token-analytics
+    ports:
+      - "8082:8080"
+    depends_on:
+      redis:
+        condition: service_healthy
     environment:
+      - REDIS_ADDR=redis:6379
+    networks:
+      - app-network
+    restart: unless-stopped
+
+  # Redis TimeSeries Service - FIXED REDIS CONNECTION
+  redis-timeseries-service:
+    build:
+      context: .
+      dockerfile: Dockerfile.timeseries
+    container_name: aiwatch-redis-timeseries-service
+    ports:
+      - "8085:8081"
+    depends_on:
+      redis:
+        condition: service_healthy
+    environment:
+      - REDIS_ADDR=redis:6379
+    networks:
+      - app-network
+    restart: unless-stopped
+
+  # Backend API
+  backend:
+    image: aiwatch-backend:latest
+    container_name: aiwatch-backend
+    ports:
+      - "8080:8080"
+      - "9090:9090"
+    depends_on:
+      redis:
+        condition: service_healthy
+    environment:
+      - REDIS_URL=redis:6379
+      - REDIS_ADDR=redis:6379
+
+    env_file:
+      - backend.env
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped
+
+  # Frontend
+  frontend:
+    image: aiwatch-frontend:latest
+    container_name: aiwatch-frontend
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+    environment:
+      - REACT_APP_API_URL=http://localhost:8080
+      - REACT_APP_ANALYTICS_URL=http://localhost:8082
+    networks:
+      - app-network
+    restart: unless-stopped
+
+  # Grafana
+  grafana:
+    image: grafana/grafana:latest
+    container_name: aiwatch-grafana
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_SERVER_DOMAIN=localhost
-      # Redis datasource plugin
       - GF_INSTALL_PLUGINS=redis-datasource
-      # Enable Redis datasource
-      - GF_FEATURE_TOGGLES_ENABLE=redisDataSource
-    ports:
-      - '3001:3000'
+    volumes:
+      - grafana_data:/var/lib/grafana
     depends_on:
       - prometheus
       - redis
-      - token-analytics
     networks:
       - app-network
+    restart: unless-stopped
 
+  # Jaeger
   jaeger:
-    image: jaegertracing/all-in-one:1.46
-    environment:
-      - COLLECTOR_ZIPKIN_HOST_PORT=:9411
+    image: jaegertracing/all-in-one:latest
+    container_name: aiwatch-jaeger
     ports:
-      - '16686:16686'  # UI
-      - '4317:4317'    # OTLP gRPC
-      - '4318:4318'    # OTLP HTTP
+      - "16686:16686"
+      - "4317:4317"
+      - "4318:4318"
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
     networks:
       - app-network
-
-  # New LLM service using Docker Compose's model provider
-  llm:
-    provider:
-      type: model
-      options:
-        model: ${LLM_MODEL_NAME:-ai/llama3.2:1B-Q8_0}
-
-  # Redis Insight for Redis management and debugging
-  redis-insight:
-    image: redislabs/redisinsight:latest
-    ports:
-      - '8001:8001'
-    environment:
-      - RIPORT=8001
-    networks:
-      - app-network
-    depends_on:
-      - redis
-    profiles:
-      - debug  # Only start with --profile debug
+    restart: unless-stopped
 
 volumes:
-  grafana-data:
-  redis-data:
+  redis_data:
+  prometheus_data:
+  grafana_data:
 
 networks:
   app-network:
