🔧 Fix backend build configuration to resolve multiple main functions error
- Add build args to exclude service files from backend build
- Use proper Dockerfile target for backend
- Maintain separate builds for token-analytics and redis-timeseries services

--- a/compose.yaml
+++ b/compose.yaml
@@ -89,11 +89,14 @@ services:
       - app-network
     restart: unless-stopped
 
-  # Backend API
+  # Backend API - FIXED BUILD CONFIGURATION
   backend:
     build:
       context: .
+      dockerfile: Dockerfile
       target: backend
+      args:
+        - EXCLUDE_SERVICES=true
     container_name: aiwatch-backend
     ports:
       - "8080:8080"
